name:                lmdb-high-level
version:             0.1
synopsis:            Geolite CSV to LMDB loader
description:         Please see README.md
homepage:            https://github.com/andrewthad/colonnade
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2016 Andrew Martin
category:            web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Lmdb.Connection
    Lmdb.Map
    Lmdb.Multimap
    Lmdb.Types
    Lmdb.Codec
    Lmdb.Internal
  build-depends:
      base >= 4.7 && < 5
    , text
    , bytestring
    , pipes
    , lmdb
    , transformers
    , ghc-prim
    , vector
    , primitive
  default-language:    Haskell2010

test-suite lmbd-high-level-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base
    , lmdb-high-level
    , test-framework
    , pipes
    , HUnit
    , QuickCheck
    , test-framework-hunit
    , test-framework-quickcheck2
    , random
    , directory
    , text
    , bytestring
    , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewthad/colonnade
